text overflow fix

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ li
     .fact{
         font-size: 2.1vw
     }
+
 }
 
 @media only screen and (max-width:620px){
@@ -150,7 +151,7 @@ li
         font-size:7vw;
     }
     .fact{
-        font-size: 3vw
+        font-size: 2.5vw;
     }
     
 
